--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,13 @@ section {
     padding: 96px 0;
 }
 
-.visually-hidden:not(:focus):not(:active) {
+ @media screen and (min-width: 1158px) {
+     section {
+         padding: 120px 0;
+     }
+ }
+
+.visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -88,8 +94,14 @@ section {
 
 .header .container {
     display: flex;
-    align-items: center;
+
     justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+.header .container {
+       align-items: center;
+    }
 }
 
 .nav-list,
@@ -240,9 +252,7 @@ section {
     width: 100%;
     height: 100%;
     background-color: #fff;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
             visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -277,8 +287,10 @@ section {
     margin-bottom: auto;
 }
 
-.nav-item-menu {
-    margin-bottom: 40px;
+.nav-list-menu {
+    display: flex;
+        flex-direction: column;
+        gap: 40px;
 }
 
         .nav-link-menu {
@@ -289,7 +301,8 @@ section {
                 letter-spacing: 0.02em;
         }
     
-        .nav-link-menu.current {
+        .nav-link-menu.current,
+        .contacts-link-menu.current {
             color: #404bbf;
         }
     
@@ -297,7 +310,7 @@ section {
         .nav-link-menu:focus,
         .contacts-link-menu:hover,
         .contacts-link-menu:focus {
-            color: #404bbf;
+            color:  #404bbf;
         }
 
         .contacts-menu {
@@ -311,15 +324,15 @@ section {
             flex-direction: column;
             gap: 24px;
         }
-    
+
         .contacts-link-menu {
-        font-weight: 500;
-            font-size: 20px;
-            line-height: 1.2;
-            letter-spacing: 0.02em;
-            color: #434455;
-            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 1.2;
+                letter-spacing: 0.02em;
+                color: #434455;
         }
+    
 
                 .social-list-menu {
                     display: flex;
@@ -349,11 +362,18 @@ width: 40px;
 
 
 
- /*.mobile-menu.is-open {
+ .mobile-menu.is-open {
     opacity: 1;
         visibility: visible;
         pointer-events: auto;
-} */
+}
+
+.mobile-menu {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
 
  @media screen and (min-width: 768px) {
      .mobile-menu {
@@ -369,28 +389,24 @@ width: 40px;
      background-image: linear-gradient(to bottom,
              rgba(46, 47, 66, 0.7),
              rgba(46, 47, 66, 0.7)),
-         url(../images/background-img.jpg);
+         url(../images/hero/Dark-bg_mobile@1x.jpg);
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
-     max-width: 1440px;
+     max-width: 320px;
      margin: 0 auto;
  }
 
- .main-container {
-     padding: 72px;
- }
-
+ 
  @media screen and (min-width: 768px) {
      .main {
          background-image: linear-gradient(to bottom,
                  rgba(46, 47, 66, 0.7),
                  rgba(46, 47, 66, 0.7)),
-             url(../images/background-img.jpg);
+             url(../images/hero/Dark-bg_tablet@1x.jpg);
+             max-width: 768px;
      }
-          .main-container {
-              padding: 112px 136px;
-          }
+
  }
 
  @media screen and (min-width: 1158px) {
@@ -398,11 +414,10 @@ width: 40px;
          background-image: linear-gradient(to bottom,
                  rgba(46, 47, 66, 0.7),
                  rgba(46, 47, 66, 0.7)),
-             url(../images/background-img.jpg);
-     }
-         .main-container {
-             padding: 188px 0;
-         }
+             url(../images/hero/people-office\ 1_desc@1x.jpg);
+    max-width: 1440px;
+            }
+   
     }
 
 
@@ -412,7 +427,7 @@ width: 40px;
      letter-spacing: 0.02em;
      text-align: center;
      color: #fff;
-     max-width: 496px;
+     max-width: 216px;
      margin-bottom: 72px;
      margin-left: auto;
      margin-right: auto;
@@ -423,6 +438,7 @@ width: 40px;
            font-size: 56px;
            line-height: 1.07;
            margin-bottom: 36px;
+        max-width: 496px;
        }
    }
 
@@ -440,7 +456,7 @@ width: 40px;
      background: #4d5ae5;
      margin: 0 auto;
      padding: 16x 32px;
-     gap: 10px;
+     
      font-family: "Roboto", sans-serif;
      font-weight: 500;
      font-size: 16px;
@@ -480,6 +496,14 @@ width: 40px;
      display: flex;
      flex-wrap: wrap;
      gap: 72px;
+ }
+
+ .opportunities-text {
+ font-weight: 500;
+ font-size: 16px;
+ line-height: 1.5;
+ letter-spacing: 0.02em;
+ color: #434455;
  }
 
  @media only screen and (min-width: 768px) {
@@ -550,9 +574,7 @@ width: 40px;
      background-color: #f4f4fd;
  }
 
- .container {
-     max-width: 264px;
- }
+
 
  .team-subtitle {
      margin-bottom: 72px;
@@ -562,7 +584,7 @@ width: 40px;
      line-height: 1.11;
      letter-spacing: 0.02em;
      text-align: center;
-     color: #2e2f42;
+
  }
 
  .team-list {
@@ -579,7 +601,7 @@ width: 40px;
      letter-spacing: 0.02em;
      text-align: center;
      color: #2e2f42;
-     margin-bottom: 8px;
+
  }
 
  .team-text {
@@ -641,12 +663,10 @@ width: 40px;
  }
 
  @media only screen and (min-width: 768px) {
-     .container {
-         max-width: 584px;
-     }
+
 
      .team-item {
-         width: calc((100% - 24px) / 2);
+         width: 264px;
          flex-shrink: 0;
      }
 
@@ -707,7 +727,7 @@ width: 40px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-bottom: 8px;
+
 }
 
  .portfolio-position {
@@ -716,8 +736,8 @@ width: 40px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
-        margin-bottom: 8px;
- }
+
+    }
 
  @media only screen and (min-width: 768px) {
      .portfolio-list {
@@ -728,9 +748,7 @@ width: 40px;
          width: calc((100% - 24px) / 2);
      }
 
-           .portfolio-image {
-               max-width: 356px;
-           }
+
  }
 
  @media only screen and (min-width: 1158px) {
@@ -794,19 +812,18 @@ width: 40px;
  .container.footer-container {
      display: flex;
      flex-direction: column;
+     padding: 96px 0;
  }
 
  .social-footer {
      margin-bottom: 72px;
  }
 
-  .form-footer {
-      margin-left: auto;
-  }
+
 
  @media only screen and (min-width: 768px) {
      .container.footer-container {
-         max-width: 528px;
+         max-width: 584px;
          flex-direction: row;
          flex-wrap: wrap;
      }
@@ -836,6 +853,7 @@ width: 40px;
          max-width: 1158px;
          align-items: baseline;
          flex-wrap: nowrap;
+         padding: 100px 0;
      }
 
      .social-footer {
@@ -892,8 +910,7 @@ width: 40px;
         justify-content: center;
         align-items: center;
         gap: 16px;
-        width: 100%;
-        height: 100%;
+       
  }
 
  .social-link-footer {
@@ -995,6 +1012,10 @@ width: 40px;
      .form-input {
          width: 264px;
          margin-right: 24px;
+         margin-bottom: 0;
+     }
+     .footer-text {
+        text-align: left;
      }
  }
 
@@ -1011,18 +1032,18 @@ width: 40px;
 
 /* #region modal */
 
-/*.backdrop {
+.backdrop {
       opacity: 0;
       visibility: hidden;
       pointer-events: none;
   }
-*/
-/*.backdrop.is-open {
+
+.backdrop.is-open {
       opacity: 1;
       visibility: visible;
       pointer-events: auto;
   }
-*/
+
 
 .backdrop {
     position: fixed;
@@ -1048,6 +1069,7 @@ padding: 72px 16px 24px;
         0 2px 1px 0 rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
         opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translate(-50%, -50%);
 }
 
 @media only screen and (min-width: 768px) {
@@ -1230,7 +1252,7 @@ padding: 72px 16px 24px;
     .modal-privacy-text {
         display: flex;
         gap: 8px;
-        align-items: flex-start;
+        align-items: center;
     }
 }
 
@@ -1254,6 +1276,7 @@ input[type="checkbox"]:checked+.modal-privacy-text .modal-form-checkbox {
         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: transparent;
+    flex-shrink: 0;
 }
 
 @media only screen and (max-width: 767px) {
